Bug 279402 - focus textbox for identifying faces gets lost too easily (and other issues)
Summary: focus textbox for identifying faces gets lost too easily (and other issues)
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-04 17:48 UTC by Simon Oosthoek
Modified: 2017-08-15 21:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Oosthoek 2011-08-04 17:48:38 UTC
Version:           2.0.0 (using KDE 4.7.0) 
OS:                Linux

When identifying faces, it is a lot of repetitive work to identify every unknown face. This work is made even more difficult by the focus and selection behaviour of the textbox for typing the name for the face.

Currently the focus seems to follow the mouse in unexpected ways. So when I swipe over the current (automatically filled) tag to change it, the focus on the box gets lost as soon as the mouse leaves the box area. This is unlike other textboxes which remain focussed when being used. (BTW, I'm so used to selecting and overtyping to change the text, that I completely overlooked the <x] thingy at the right of the box...)

I'm sure there are lots of ways to improve the usability of the face-identification, because it is a lot of hard work to do right now.
As example, I scanned my limited collection of about 20 months and got around 2000 unknown faces. Most of these represent the same faces over and over, so it should be possible to group them based on similarity (that's what it does anyway, when looking for faces, right?)

Another problem is the fact that I shoot RAW+JPG and this leads to mostly double the number of faces found, since each RAW and each JPG is a different image to the detector, it seems.

The check and minus signs also come without any explanation. They seem obvious at first, but a small hint in a tooltip could make a big difference in usability for new users. (Check adds the tag to the face, minus says: this is not a face? or something else?)

It would also help to select multiple images and identify them at once.

Undo the identification would help correct mistakes in the identification (easily done when having so many repeating clicks).


Reproducible: Didn't try

Steps to Reproduce:
have about 2000 faces in unknown for about 20 people and 50% of one person, 30% of another. Start identifying them and use the swipe select method to change the tag below the image.

Actual Results:  
focus gets lost easily

Expected Results:  
focus remains in the textbox after selecting and for the rest: less manual work to identify faces (that's what face detection is intended to improve, I think).
Comment 1 Marcel Wiesweg 2011-08-08 20:24:22 UTC
I read a lot of duplication with 279199 here, so I concentrate on the swipe-select issue. Question: What do you mean with "swipe-select method", how am I supposed to reproduce this?
Comment 2 Simon Oosthoek 2011-08-09 08:14:27 UTC
with swipe method, I mean selecting the text in the text-box with the mouse. The focus leaves the text-box when the mousepointer "overshoots" to the left panel containing the tags. This is confusing when the mouse-settings in the desktop is not focus follows mouse, but focus upon click. Obviously this is inside a single program's window, so digikam is using a different focus style than the desktop.

As for similarity with #279199, I saw the comment:
> The name's should now be "selected" so if you just type, it is deleted. Works
> like Browser address bars on Windows.

I checked and I see that at first the text is selected, but after a while, the selection isn't visible or the text isn't selected any more, thus my method of swiping to select and subsequent problems.

BTW, I really don't like it when Linux programs are compared to Windows programs as if one should know those. I have no way of comparing it since I've not been on Windows for over 10 years.
Comment 3 Marcel Wiesweg 2011-08-13 13:39:55 UTC
Git commit ef191829705275f07e5221c1e49641e624f333a7 by Marcel Wiesweg.
Committed on 13/08/2011 at 15:37.
Pushed by mwiesweg into branch 'master'.

When the user clicks in the AssignNameOverlay line edit, enter persistent mode

That means that the line edit is fixed on the item and is not easily hidden.
This may introduce new cases where the overlay is too persistent, these
need to be reported and fixed then.

BUG: 279402

M  +2    -1    NEWS
M  +49   -11   digikam/items/assignnameoverlay.cpp
M  +1    -0    digikam/items/assignnameoverlay.h
M  +9    -2    libs/widgets/itemview/imagedelegateoverlay.cpp

http://commits.kde.org/digikam/ef191829705275f07e5221c1e49641e624f333a7