When the user clicks in the AssignNameOverlay line edit, enter persistent mode

That means that the line edit is fixed on the item and is not easily hidden.
This may introduce new cases where the overlay is too persistent, these
need to be reported and fixed then.

BUG: 279402